--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
         run: npm install
       - name: 'Install windows-build-tools'
         run: npm install --global windows-build-tools
-        if: matrix.os == windows-latest
+        if: ${{ matrix.os == windows-latest }}
       - name: 'Build LitNews'
         run: npm run build      
         env:
