--- a/.github/workflows/ubuntu-bulider.yml
+++ b/.github/workflows/ubuntu-bulider.yml
@@ -1,4 +1,4 @@
-name: Build LitNews
+name: Ubuntu Builder
 
 on:
   push:
@@ -8,19 +8,13 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: 'Setup node'
         uses: actions/setup-node@v1
       - name: 'Install NPM dependencies'
         run: npm install
-      - name: 'Install windows-build-tools'
-        run: npm install --global windows-build-tools
-        if: ${{ matrix.os }} == windows-latest 
       - name: 'Build LitNews'
         run: npm run build      
         env:
